# scotland-yard-egui

./: .gitignore  Cargo.toml  README.md  index.html  rustfmt.toml  scotland-yard-egui-124e453bc4d235aa.js  scotland-yard-egui-22a1ae4ba0d5ff31.js  scotland-yard-egui-25b018f41eb2cd31.js  scotland-yard-egui-25b018f41eb2cd31_bg.wasm  scotland-yard-egui-2c8576933fd3dd4.js  scotland-yard-egui-3cb1fd3a48c905cc.js  scotland-yard-egui-3cb1fd3a48c905cc_bg.wasm  scotland-yard-egui-50157c1addd7b7db.js  scotland-yard-egui-50157c1addd7b7db_bg.wasm  scotland-yard-egui-520a0b88c0826e52.js  scotland-yard-egui-520a0b88c0826e52_bg.wasm  scotland-yard-egui-54e20afdf90f69d5_bg.wasm  scotland-yard-egui-5a1bc994bdf642db.js  scotland-yard-egui-5a1bc994bdf642db_bg.wasm  scotland-yard-egui-6b0ff830ce68b177.js  scotland-yard-egui-6b0ff830ce68b177_bg.wasm  scotland-yard-egui-7180b980cf1a864.js  scotland-yard-egui-7180b980cf1a864_bg.wasm  scotland-yard-egui-71f0acd827c155fc.js  scotland-yard-egui-71f0acd827c155fc_bg.wasm  scotland-yard-egui-86a6a9867f7cc5ef.js  scotland-yard-egui-86a6a9867f7cc5ef_bg.wasm  scotland-yard-egui-91be5b3235b6ac02.js  scotland-yard-egui-993b689f2b77d6da.js  scotland-yard-egui-993b689f2b77d6da_bg.wasm  scotland-yard-egui-9c8e8eb77c1ca3ec.js  scotland-yard-egui-aaef0cc418196066.js  scotland-yard-egui-ae4f803a077d7a7e.js  scotland-yard-egui-bd3888a6f26b12eb.js  scotland-yard-egui-bd3888a6f26b12eb_bg.wasm  scotland-yard-egui-c396a6c656b5cfe3.js  scotland-yard-egui-c396a6c656b5cfe3_bg.wasm  scotland-yard-egui-c7081e121ed03a02.js  scotland-yard-egui-c7081e121ed03a02_bg.wasm  scotland-yard-egui-d0d503e76ec66004.js  (+18 more)
.github/workflows/: pages.yml  rust.yml
bruteforce-police/: 3-Ikosaeder-3.msgpack
saves/: 2d-Polygon-6-seitig-100-2024-06-01-50131.ron  2d-Polygon-6-seitig-100-2024-06-13-73934.ron  2d-Polygon-6-seitig-100-2024-06-15-66857.ron  2d-Polygon-6-seitig-100-2024-06-16-2226.ron  2d-Polygon-6-seitig-100-2024-06-17-84844.ron  2d-Polygon-6-seitig-100-2024-07-03-31244.ron  2d-Polygon-6-seitig-100-2024-07-03-56887.ron  2d-Polygon-6-seitig-101-2024-06-01-78888.ron  2d-Polygon-6-seitig-101-2024-07-03-61886.ron  2d-Polygon-6-seitig-150-2024-06-02-48009.ron  2d-Polygon-6-seitig-150-2024-06-03-49493.ron  2d-Polygon-6-seitig-151-2024-06-02-57129.ron  2d-Polygon-6-seitig-151-2024-06-02-66659.ron  2d-Polygon-6-seitig-20-2024-06-24-52819.ron  2d-Polygon-6-seitig-30-2024-06-16-57244.ron  2d-Polygon-6-seitig-31-2024-05-29-65675.ron  2d-Polygon-6-seitig-32-2024-06-05-30581.ron  2d-Polygon-6-seitig-32-2024-06-05-33189.ron  2d-Polygon-6-seitig-32-2024-06-06-31803.ron  2d-Polygon-6-seitig-32-2024-06-08-77719.ron  2d-Polygon-6-seitig-32-2024-06-12-75509.ron  2d-Polygon-6-seitig-34-2024-05-28-67330.ron  2d-Polygon-6-seitig-34-2024-05-29-62593.ron  2d-Polygon-6-seitig-40-2024-06-01-49312.ron  2d-Polygon-6-seitig-61-2024-05-27-35774.ron  2d-Polygon-6-seitig-61-2024-05-27-36232.ron  2d-Polygon-6-seitig-61-2024-05-29-66114.ron  2d-Polygon-6-seitig-78-2024-09-15-39816.ron  2d-Polygon-6-seitig-78-2024-09-15-39907.ron  2d-Polygon-6-seitig-79-2024-06-15-40962.ron  2d-Polygon-6-seitig-79-2024-06-17-36900.ron  Gitter-Dreiecke-100-2024-12-19-85490.ron  Gitter-Dreiecke-100-2025-02-19-67300.ron  Gitter-Dreiecke-100-2025-06-16-38666.ron  Gitter-Dreiecke-129-2024-10-23-69792.ron  Gitter-Dreiecke-129-2024-10-23-70992.ron  Gitter-Dreiecke-140-2024-10-24-50520.ron  Gitter-Dreiecke-150-2024-12-28-61720.ron  Gitter-Dreiecke-186-2024-11-11-74728.ron  Gitter-Dreiecke-186-2024-11-12-5643.ron  (+50 more)
src/: app.rs  geo.rs  graph.rs  lib.rs  main.rs  rand.rs  rle.rs
src/app/: bruteforce_state.rs  cam.rs  cetz.rs  character.rs  color.rs  dim2.rs  dim3.rs  info.rs  manual_markers.rs  map.rs  saves.rs  state_2d.rs  state_3d.rs  style.rs  tikz.rs
src/geo/: mat.rs  pos3.rs  vec3.rs
src/graph/: algos.rs  bool_csr.rs  bruteforce.rs  edgelist.rs  hex_pos.rs  hull.rs  planar.rs  planar3d.rs  shape.rs
src/graph/bruteforce/: energy_bf.rs  fog_bf.rs  fog_util.rs  parallel.rs  queues.rs  rules.rs  standard_bf.rs  thread_manager.rs
src/graph/hull/: boundary.rs  escapable.rs  escapable_extra.rs  escapable_grid.rs  plane_cop_strat.rs
src/graph/planar3d/: bidirectional_range.rs  convex_hull.rs  convex_triangle_hull.rs  equivalence.rs  fog.rs  grid.rs
src/graph/planar3d/equivalence/: explicit.rs  skewed_torus.rs  torus.rs
