[package]
name = "scotland-yard-egui"
version = "0.1.0"
authors = ["Bruno Borchardt"]
edition = "2021"
rust-version = "1.79.0"


[dependencies]
egui = "0.27.2"
eframe = { version = "0.27.2", default-features = false, features = [
    #"accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
itertools = "0.11.0"
compile-time = "0.2.0"
bitvec = { version = "1.0.1", features = ["alloc", "serde"] }
smallvec = "1.13.0"
rmp-serde = "1.1.2"
chrono = "0.4.33"
strum = "=0.26.2"
strum_macros = "0.26"
ron = "0.8.1"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
