[package]
name = "scotland-yard-egui"
version = "0.1.0"
authors = ["Bruno Borchardt"]
edition = "2024"
#rust-version = "1.79.0"
default-run = "scotland-yard-egui"


[dependencies]
egui = "0.35"
eframe = { version = "0.35", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",
    "accesskit",
    "web_screen_reader",
] }
log = "0.4"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
itertools = "0.15.0"
compile-time = "0.2.0"
bitvec = { version = "1.1.1", features = ["alloc", "serde"] }
smallvec = "1.15.2"
rmp-serde = "1.3.1"
chrono = "0.4.45"
strum = "0.28.0"
strum_macros = "0.28.0"
ron = "0.12.2"
web-time = "1.1.0"
arrayvec = "0.7.7"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
nix = { version = "0.26.4", features = ["fs"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"


[profile.release]
opt-level = 2 # fast and small wasm
#debug = true # uncomment for flamegraph

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
